Project

General

Profile

Actions

Bug #15278

closed

libsmb: unused parameter

Added by Toomas Soome 6 months ago. Updated 5 months ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
smb - SMB server and client
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
clang
Gerrit CR:
External Bug:

Description

Build errors with clang:

    In file included from ../common/smb_lgrp.c:38:
    ../common/smb_sqlite.h:43:25: error: unused parameter 'filename' [-Werror,-Wunused-parameter]
    sqlite_open(const char *filename, int mode, char **errmsg)
                            ^
    ../common/smb_sqlite.h:43:39: error: unused parameter 'mode' [-Werror,-Wunused-parameter]
    sqlite_open(const char *filename, int mode, char **errmsg)
                                          ^
    ../common/smb_sqlite.h:43:52: error: unused parameter 'errmsg' [-Werror,-Wunused-parameter]
    sqlite_open(const char *filename, int mode, char **errmsg)
                                                       ^
    ../common/smb_sqlite.h:50:22: error: unused parameter 'db' [-Werror,-Wunused-parameter]
    sqlite_close(sqlite *db)
                         ^
    ../common/smb_sqlite.h:56:28: error: unused parameter 'fmt' [-Werror,-Wunused-parameter]
    sqlite_mprintf(const char *fmt, ...)
                               ^
    ../common/smb_sqlite.h:63:22: error: unused parameter 'p' [-Werror,-Wunused-parameter]
    sqlite_freemem(void *p)
                         ^
    ../common/smb_sqlite.h:69:24: error: unused parameter 'db' [-Werror,-Wunused-parameter]
    sqlite_compile(sqlite *db, const char *zSql, const char **pzTail,
                           ^
    ../common/smb_sqlite.h:69:40: error: unused parameter 'zSql' [-Werror,-Wunused-parameter]
    sqlite_compile(sqlite *db, const char *zSql, const char **pzTail,
                                           ^
    ../common/smb_sqlite.h:69:59: error: unused parameter 'pzTail' [-Werror,-Wunused-parameter]
    sqlite_compile(sqlite *db, const char *zSql, const char **pzTail,
                                                              ^
    ../common/smb_sqlite.h:70:17: error: unused parameter 'ppVm' [-Werror,-Wunused-parameter]
        sqlite_vm **ppVm, char **pzErrmsg)
                    ^
    ../common/smb_sqlite.h:70:30: error: unused parameter 'pzErrmsg' [-Werror,-Wunused-parameter]
        sqlite_vm **ppVm, char **pzErrmsg)
                                 ^
    ../common/smb_sqlite.h:77:26: error: unused parameter 'res' [-Werror,-Wunused-parameter]
    sqlite_free_table(char **res)
                             ^
    ../common/smb_sqlite.h:83:34: error: unused parameter 'db' [-Werror,-Wunused-parameter]
    sqlite_last_insert_rowid(sqlite *db)
                                     ^
    ../common/smb_sqlite.h:90:29: error: unused parameter 'db' [-Werror,-Wunused-parameter]
    sqlite_busy_timeout(sqlite *db, int ms)
                                ^
    ../common/smb_sqlite.h:90:37: error: unused parameter 'ms' [-Werror,-Wunused-parameter]
    sqlite_busy_timeout(sqlite *db, int ms)
                                        ^
    ../common/smb_sqlite.h:96:26: error: unused parameter 'db' [-Werror,-Wunused-parameter]
    sqlite_get_table(sqlite *db, const char *zSql, char ***pazResult, int *pnRow,
                             ^
    ../common/smb_sqlite.h:96:42: error: unused parameter 'zSql' [-Werror,-Wunused-parameter]
    sqlite_get_table(sqlite *db, const char *zSql, char ***pazResult, int *pnRow,
                                             ^
    ../common/smb_sqlite.h:96:56: error: unused parameter 'pazResult' [-Werror,-Wunused-parameter]
    sqlite_get_table(sqlite *db, const char *zSql, char ***pazResult, int *pnRow,
                                                           ^
    ../common/smb_sqlite.h:96:72: error: unused parameter 'pnRow' [-Werror,-Wunused-parameter]
    sqlite_get_table(sqlite *db, const char *zSql, char ***pazResult, int *pnRow,
                                                                           ^
    ../common/smb_info.c:609:23: error: unused parameter 's' [-Werror,-Wunused-parameter]
    smb_trace(const char *s)
                          ^
    1 error generated.

    ../common/smb_acl.c:113:37: error: unused parameter 'which_acl' [-Werror,-Wunused-parameter]
    smb_acl_isvalid(smb_acl_t *acl, int which_acl)
                                        ^

Testing done: build. Run /opt/smbsrv-tests/bin/smbsrvtests. Diff from last run:

tsoome@beastie:/var/tmp/test_results/smbsrv-tests$ diff -u smbtor-smb2-20221212T151416.summary smbtor-smb2-20221230T120924.summary 
--- smbtor-smb2-20221212T151416.summary E dets 12 15:26:55 2022
+++ smbtor-smb2-20221230T120924.summary R dets 30 12:13:43 2022
@@ -63,8 +63,8 @@
 smb2.acls.INHERITANCE.INHERITANCE: FAIL
 smb2.acls.INHERITFLAGS.INHERITFLAGS: FAIL
 smb2.acls.SDFLAGSVSCHOWN.SDFLAGSVSCHOWN: FAIL
-smb2.acls.DYNAMIC.DYNAMIC: FAIL
-smb2.acls.SACL.SACL: FAIL
+smb2.acls.DYNAMIC.DYNAMIC: PASS
+smb2.acls.SACL.SACL: PASS
 smb2.acls.ACCESSBASED.ACCESSBASED: FAIL
 smb2.acls.OWNER-RIGHTS.OWNER-RIGHTS: FAIL
 smb2.acls.OWNER-RIGHTS-DENY.OWNER-RIGHTS-DENY: FAIL
@@ -241,7 +241,7 @@
 smb2.kernel-oplocks.kernel_oplocks4.kernel_oplocks4: PASS
 smb2.kernel-oplocks.kernel_oplocks5.kernel_oplocks5: FAIL
 smb2.kernel-oplocks.kernel_oplocks6.kernel_oplocks6: PASS
-smb2.kernel-oplocks.kernel_oplocks7.kernel_oplocks7: FAIL
+smb2.kernel-oplocks.kernel_oplocks7.kernel_oplocks7: PASS
 smb2.kernel-oplocks.kernel_oplocks8.kernel_oplocks8: SKIP
 smb2.streams.dir.dir: FAIL
 smb2.streams.io.io: PASS
@@ -396,8 +396,8 @@

 RESULTS:
 ======================
-PASS:              237
-FAIL:               81
+PASS:              240
+FAIL:               78
 UNKNOWN:             0
 SKIP:               76
 KILLED:              0
tsoome@beastie:/var/tmp/test_results/smbsrv-tests$

Actions #1

Updated by Electric Monk 6 months ago

  • Gerrit CR set to 2567
Actions #2

Updated by Toomas Soome 5 months ago

  • Description updated (diff)
  • Status changed from In Progress to Pending RTI
Actions #3

Updated by Toomas Soome 5 months ago

  • Description updated (diff)
Actions #4

Updated by Electric Monk 5 months ago

  • Status changed from Pending RTI to Closed
  • % Done changed from 90 to 100

git commit a56510328f750698b33a4c5fc2756158d23fc887

commit  a56510328f750698b33a4c5fc2756158d23fc887
Author: Toomas Soome <tsoome@me.com>
Date:   2023-01-03T06:10:27.000Z

    15278 libsmb: unused parameter
    Reviewed by: Dan Cross <cross@oxidecomputer.com>
    Reviewed by: Matt Barden <mbarden@racktopsystems.com>
    Approved by: Robert Mustacchi <rm@fingolfin.org>

Actions

Also available in: Atom PDF