15278 libsmb: unused parameter Reviewed by: Dan Cross <cross@oxidecomputer.com> Reviewed by: Matt Barden <mbarden@racktopsystems.com> Approved by: Robert Mustacchi <rm@fingolfin.org>